# unnamed

./: .gitignore  CMakeLists.txt  README.md  make_deleter.h  unnamed_ptr.h
examples/: CMakeLists.txt  file.cpp  incomplete_class.cpp  incomplete_class.h  incomplete_class_user.cpp  int.cpp  polymorphic.cpp  self_destroyer.cpp
tests/: alloc.cpp  borrowed.cpp  polymorphic.cpp  simple.cpp
